--- a/views/partials/headermodel.ejs
+++ b/views/partials/headermodel.ejs
@@ -10,8 +10,11 @@
               crossorigin="anonymous"></script>
             <!--<link rel = "stylesheet" href="/stylesheets/main.css">-->
             
-            <script src="../public/libaries/three.js"></script>
-            <script src="../public/libaries/structures.js"></script>
+            <script src="../public/libraries/three.js"></script>
+            <script src="../public/structures.js"></script>
+            <script src="../public/operators.js"></script>
+            <script src="../public/controller.js"></script>
+            <script src="../public/cameracontroller.js"></script>
             <!--<script type="text/javascript" src="../private/datastream.js"></script>-->
             
         </head>
